# docs/spec/openapi/portarium-control-plane.v1.yaml
@@ -75,6 +75,7 @@ paths:
         - bearerAuth: []
       parameters:
         - $ref: '#/components/parameters/WorkspaceIdPath'
+        - $ref: '#/components/parameters/ApprovalStatusQuery'
         - $ref: '#/components/parameters/LimitQuery'
         - $ref: '#/components/parameters/CursorQuery'
       responses:
@@ -1883,6 +1884,12 @@ components:
       schema:
         type: string
         minLength: 1
+    ApprovalStatusQuery:
+      name: status
+      in: query
+      required: false
+      schema:
+        $ref: '#/components/schemas/ApprovalStatus'
     WorkItemStatusQuery:
       name: status
       in: query
